# Lua

./: .gitignore  CMakeLists.txt  README.md  lapi.c  lauxlib.c  lauxlib.h  ldo.c  linit.c  lstate.c  lstrlib.c  lua.h
learn/headers/: mymath.h  mytuple.h  testlua.h
learn/lua/: basic.lua  eight_queen_puzzle.lua  function.lua  lproc.lua  lua_thread.lua  main.lua  manager_res.lua  numbers.lua  string.lua  table.lua  test_chunk.lua  userdata.lua  win_config.lua
learn/src/: array.c  arraymeta.c  arrayobj.c  dir.c  lproc.c  lxp.c  main.c  main_src.c  mymath.c  mytuple.c  testlua.c
